--- a/Kartverket.Geonorge.Download/Kartverket.Geonorge.Download.csproj
+++ b/Kartverket.Geonorge.Download/Kartverket.Geonorge.Download.csproj
@@ -66,6 +66,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Linq" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -229,17 +230,14 @@
     </Compile>
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\AreasModel.cs" />
+    <Compile Include="Models\Dataset.cs" />
     <Compile Include="Models\DownloadContext.cs" />
     <Compile Include="Models\download_rest.cs" />
-    <Compile Include="Models\FormatModel.cs" />
+    <Compile Include="Models\Filliste.cs" />
     <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Models\ProjectionsModel.cs" />
-    <Compile Include="Models\Sample.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
-    <Compile Include="Models\CapabilitiesModel.cs" />
     <Compile Include="Services\CapabilitiesService.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
