set custom errors

--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -13,6 +13,7 @@
   <add name="Filliste" connectionString="data source=.\SQLEXPRESS;initial catalog=kartverket_nedlasting;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
   <appSettings></appSettings>
   <system.web>
+    <customErrors mode="Off" />
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
