Remove unused code

--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Server=.\SQLEXPRESS;Database=kartverket_nedlasting;Integrated Security=True;" providerName="System.Data.SqlClient" />
-  <add name="Filliste" connectionString="data source=.\SQLEXPRESS;initial catalog=kartverket_nedlasting;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+    </connectionStrings>
   <appSettings></appSettings>
   <system.web>
     <customErrors mode="Off" />
