--- a/Kartverket.Geonorge.Download/Kartverket.Geonorge.Download.csproj
+++ b/Kartverket.Geonorge.Download/Kartverket.Geonorge.Download.csproj
@@ -246,6 +246,8 @@
     <Compile Include="Models\download_rest.cs" />
     <Compile Include="Models\Filliste.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\OrderDownload.cs" />
+    <Compile Include="Models\orderItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
