--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -11,7 +11,9 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Server=.\SQLEXPRESS;Database=kartverket_nedlasting;Integrated Security=True;" providerName="System.Data.SqlClient" />
     </connectionStrings>
-  <appSettings></appSettings>
+  <appSettings>
+    <add key="BuildVersionNumber" value="3.1" />
+  </appSettings>
   <system.web>
     <customErrors mode="Off" />
     <authentication mode="None" />
