--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -13,6 +13,7 @@
     </connectionStrings>
   <appSettings>
     <add key="BuildVersionNumber" value="3.1" />
+    <add key="DownloadUrl" value="http://download.dev.geonorge.no/" />
   </appSettings>
   <system.web>
     <customErrors mode="Off" />
