--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -7,14 +7,38 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Server=.\SQLEXPRESS;Database=kartverket_nedlasting;Integrated Security=True;" providerName="System.Data.SqlClient" />
     </connectionStrings>
+    <log4net debug="true">
+    <root>
+      <priority value="DEBUG" />
+      <appender-ref ref="TraceAppender" />
+      <appender-ref ref="LogFileAppender" />
+    </root>
+    <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file value="c:\\inetpub\\logs\\download" />
+      <appendToFile value="true" />
+      <rollingStyle value="Date" />
+      <param name="StaticLogFileName" value="false" />
+      <datePattern value=".yyyyMMdd.lo\g" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
+      </layout>
+    </appender>
+    <appender name="TraceAppender" type="log4net.Appender.TraceAppender">
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%-6level - %message%newline" />
+      </layout>
+    </appender>
+  </log4net>
   <appSettings>
     <add key="BuildVersionNumber" value="3.1" />
     <add key="GeonorgeUrl" value="http://prototype.dev.geonorge.no/Geonorge/" />
     <add key="DownloadUrl" value="http://download.dev.geonorge.no/" />
+    <add key="WebmasterEmail" value="post@norgedigitalt.no" />
   </appSettings>
   <system.web>
     <customErrors mode="Off" />
