--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -36,9 +36,10 @@
   </log4net>
   <appSettings>
     <add key="BuildVersionNumber" value="3.1" />
-    <add key="GeonorgeUrl" value="http://prototype.dev.geonorge.no/Geonorge/" />
+    <add key="GeonorgeUrl" value="//www.test.geonorge.no/" />
     <add key="DownloadUrl" value="http://download.dev.geonorge.no/" />
     <add key="RegistryUrl" value="http://register.dev.geonorge.no/" />
+    <add key="KartkatalogenUrl" value="//kartkatalogen.dev.geonorge.no/" />
     <add key="WebmasterEmail" value="post@norgedigitalt.no" />
   </appSettings>
   <system.web>
