Show in logo if site is dev, test

--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -41,6 +41,7 @@
     <add key="RegistryUrl" value="http://register.dev.geonorge.no/" />
     <add key="KartkatalogenUrl" value="//kartkatalogen.dev.geonorge.no/" />
     <add key="WebmasterEmail" value="post@norgedigitalt.no" />
+    <add key="EnvironmentName" value="dev" />
   </appSettings>
   <system.web>
     <customErrors mode="Off" />
