--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -53,6 +53,8 @@
     </httpModules>
   </system.web>
   <system.webServer>
+    <httpErrors errorMode="DetailedLocalOnly" existingResponse="PassThrough">
+    </httpErrors>
     <modules>
       <remove name="FormsAuthentication" />
       <remove name="ApplicationInsightsWebTracking" />
