Change url from kartkatalogen to kartkatalog

--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -39,7 +39,7 @@
     <add key="GeonorgeUrl" value="//www.test.geonorge.no/" />
     <add key="DownloadUrl" value="http://download.dev.geonorge.no/" />
     <add key="RegistryUrl" value="http://register.dev.geonorge.no/" />
-    <add key="KartkatalogenUrl" value="//kartkatalogen.dev.geonorge.no/" />
+    <add key="KartkatalogenUrl" value="//kartkatalog.dev.geonorge.no/" />
     <add key="WebmasterEmail" value="post@norgedigitalt.no" />
     <add key="EnvironmentName" value="dev" />
   </appSettings>
