--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -49,12 +49,18 @@
     <customErrors mode="Off" />
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" enableVersionHeader="false"/>
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Extensibility.Web.RequestTracking.WebRequestTrackingModule, Microsoft.ApplicationInsights.Extensibility.Web" />
     </httpModules>
   </system.web>
   <system.webServer>
+    <httpProtocol>
+      <customHeaders>
+        <clear />
+        <remove name="X-Powered-By" />
+      </customHeaders>
+    </httpProtocol>
     <httpErrors errorMode="DetailedLocalOnly" existingResponse="PassThrough">
     </httpErrors>
     <modules>
